examples/test/testpolicy3130.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3130
  namespace: namespace385
spec:
  podSelector:
    matchLabels:
      key30: value24
      key44: value2
      key15: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value13
      podSelector:
        matchLabels:
          key25: value18
          key27: value21
